corrected rate bug

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-  <title>PropertyValues</title>
+  <title>RVA Property Values</title>
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -40,7 +40,7 @@
   <header class="app-bar promote-layer">
     <div class="app-bar-container">
       <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
-      <h1 class="logo">Property Value</h1>
+      <h1 class="logo">RVA Property Values</h1>
       <section class="app-bar-actions">
       <!-- Put App Bar Buttons Here -->
       <!-- e.g <button><i class="icon icon-star"></i></button> -->
@@ -74,6 +74,10 @@
       <p>
         Current:<br>
         <output id="estimatedValue"></output>
+      </p>
+      <p>Details<br>
+      <input id="showDetails" type="checkbox">
+      <output type="text" id="details" hidden="true"></output>
       </p>
     </div>
 
